--- a/src/jquery.bracket.scss
+++ b/src/jquery.bracket.scss
@@ -27,11 +27,12 @@ $popupColor: #eef7fb;
 $boxHeight: 46px;
 $boxPadding: 10px;
 
-$teamBoxWidth: 110px;
+$teamBoxWidth: 135px;
 $teamBoxHeight: $boxHeight;
 $teamBoxBorderRadius: 8px;
 
 $teamBoxWidthFirstRound: 180px;
+$teamBoxPaddingFirstRound: 10px 10px 6px 10px;
 
 /**
  * Some mixins here
@@ -139,7 +140,7 @@ div.jQBracket {
   .round {
     position: relative;
     width: $teamBoxWidth;
-    margin-right: 20px;
+    margin-right: 18px;
     float: left;
 
     &.first-round {
@@ -155,18 +156,23 @@ div.jQBracket {
           .label {
             width: 100% !important;
           }
+
+          .label {
+            padding: $teamBoxPaddingFirstRound;
+          }
         }
       }
     }
 
-    .anchor {
+    .round-label {
       width: 100%;
-      font-size: 16px;
+      font-family: arial;
+      font-size: 13px;
       color: #000000;
       font-weight: bold;
       text-align: center;
       position: absolute;
-      padding-top: 20px;
+      padding-top: 10px;
     }
   }
   .match {
@@ -201,14 +207,14 @@ div.jQBracket {
       margin: 0;
     }
     div.label {
-      padding: $boxPadding $boxPadding/2;
+      padding: $boxPadding;
       /* position: absolute; */
       position: relative;
       width: 100%;
       height: auto;
       white-space: nowrap;
       overflow: hidden;
-      font-size: 11px;
+      font-size: 10px;
       color: $fontColor;
       @include border-radius($teamBoxBorderRadius);
       overflow: visible;
@@ -230,25 +236,33 @@ div.jQBracket {
 
       .number {
         width: 18px;
+        font-size: 9px;
+        margin-right: 6px;
       }
 
       .type {
-        width: 18px;
+        width: 24px;
+        font-weight: bold;
       }
 
       .country {
         width: 22px;
-        margin-right: 5px;
+        margin-right: 4px;
       }
 
       .name {
         margin-right: 5px;
         float: left;
+
+        &.clear {
+          clear: both;
+        }
       }
 
       .result {
         float: left;
         clear: both;
+        margin-top: 6px;
       }
     }
     div.score {
@@ -321,87 +335,34 @@ div.jQBracket {
 
         .label {
           .title {
-            font-size: 13px;
+            font-size: 11px;
             font-weight: bold;
+            margin-bottom: 6px;
+            float: left;
+            clear: both;
           }
           color: $winColorForeground;
         }
       }
     } 
 
-    .popup-activator {
-      position: relative;
-      background: red;
-      overflow: visible;
-
-      .corner {
-        background: #1b8dc8;
-        display: none;
-
-        width: 21px;
-        height: 21px;
-
-        position: absolute;
-        top: -1px;
-        right: -1px;
-        
-        color: #ffffff;
-        line-height: 20px;
-        font-weight: bold;
-        text-align: center;
-        font-size: 20px;
-        z-index: 10;
-        @include border-top-right-radius($teamBoxBorderRadius);
-        cursor: pointer;
-      }
-      .popup {
-        width: 200px;
-        display: none;
-        position: absolute;
-        top: 0px;
-        right: -180px;
-        z-index: 10000;
-
-        .popup-info {
-          background: $popupColor;
-          margin-top: 24px;
-        
-          
-          @include border-radius($teamBoxBorderRadius);
-          border: 1px solid #1983ba;
-          padding: 10px 15px;
-          @include transition(1s);
-
-          .date,
-          .club,
-          .info {
-            font-size: 12px;
-          }
-
-          .date {
-            font-weight: bold;
-          }
-          .club a {
-            color: #1983ba;
-          }
-        }
-      }
-    }
-
     &:hover {
-
       .popup-activator .corner {
         display: block !important;
       }
 
+      /*
       .popup-activator:hover .popup {
         display: block;
       }
+      */
     }
 
+    /*
     .popup:hover {
-        display: block !important;
+      display: block !important;
     }
+    */
   }
   .connector {
     border: 2px solid $connectorColor;
@@ -575,5 +536,65 @@ div.jQBracket.rl {
         border-left-color: $loseColor;
       }
     }
+  }
+}
+
+.popup-info {
+  background: $popupColor;
+  margin-top: 24px;
+
+  
+  @include border-radius($teamBoxBorderRadius);
+  border: 1px solid #1983ba;
+  padding: 10px 12px 12px 12px;
+  @include transition(1s);
+  font-family: Arial;
+
+  .date,
+  .club,
+  .info {
+    font-size: 11px;
+  }
+
+  .date {
+    font-weight: bold;
+  }
+  .club a {
+    color: #1983ba;
+    text-decoration: none;
+  }
+}
+
+.popup-activator {
+  position: relative;
+  overflow: visible;
+
+  .corner {
+    background: #1b8dc8;
+    display: none;
+
+    width: 21px;
+    height: 21px;
+
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    
+    color: #ffffff;
+    line-height: 20px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 20px;
+    z-index: 10;
+    @include border-top-right-radius($teamBoxBorderRadius);
+    cursor: pointer;
+  }
+  .popup {
+    width: 140px;
+    display: none;
+    position: absolute;
+    top: 0px;
+    right: -120px;
+    z-index: 10000;
   }
 }
