--- a/src/jquery.bracket.scss
+++ b/src/jquery.bracket.scss
@@ -89,21 +89,11 @@ $teamBoxPaddingFirstRound: 10px 10px 6px 10px;
  * Style for the graph are starting from
  */
 
-#content .tournament-graph {
-  background: #ffffff;
-}
-
-#content #tournament-graph-framebox {
-  position: relative;
-  overflow-x: auto;
-  overflow-y: hidden;
-}
-
 div.jQBracket {
   font-family: Arial, Verdana;
   font-size: 14px;
   position: relative;
-  top: 50px;
+  top: 30px;
 
   .tools {
     position: absolute;
@@ -253,6 +243,11 @@ div.jQBracket {
       .name {
         margin-right: 5px;
         float: left;
+
+        a {
+          color: inherit;
+          text-decoration: none;
+        }
 
         &.clear {
           clear: both;
