Winner bubble fixes
Fixing styles of the winner buble because the .clear class was hiding
the name of the winner in some of the cases.

--- a/src/jquery.bracket.scss
+++ b/src/jquery.bracket.scss
@@ -252,7 +252,7 @@ div.jQBracket {
           text-decoration: none;
         }
 
-        &.clear {
+        &.cleared {
           clear: both;
         }
       }
