Change in the naming of the popups, prefix added

--- a/src/jquery.bracket.less
+++ b/src/jquery.bracket.less
@@ -350,22 +350,10 @@ div.jQBracket {
     }
 
     &:hover {
-      .popup-activator .corner {
+      .jb-popup-activator .corner {
         display: block !important;
       }
-
-      /*
-      .popup-activator:hover .popup {
-        display: block;
-      }
-      */
     }
-
-    /*
-    .popup:hover {
-      display: block !important;
-    }
-    */
   }
   .connector {
     border: 2px solid @connectorColor;
@@ -568,7 +556,7 @@ div.jQBracket.rl {
   }
 }
 
-.popup-activator {
+.jb-popup-activator {
   position: relative;
   overflow: visible;
 
